--- a/www/src/main/resources/templates/member/myPage.html
+++ b/www/src/main/resources/templates/member/myPage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>마이페이지</title>
-<link href="/css/myPageStyle.css" rel="stylesheet">
+<link href="/css/myPageStyle00.css" rel="stylesheet">
   <link href="/css/mainStyle.css" rel="stylesheet">
 </head>
 <body>
@@ -11,6 +11,7 @@
   <th:block th:replace="/fragment::header"></th:block>
     <div id="mypage">
     
+    <h2 class="mypage-title">마이페이지</h2>
 
   <div class="mypage">
       <table>
@@ -38,41 +39,28 @@
         <tr>
                 <th>프로필 사진</th>
                 <td>
+                <!-- 업로드된 프로필 사진 표시 -->
+                    <div th:if="${session.user.profile}">
+                        <img th:src="@{'/image/' + ${session.user.profile}}" alt="Profile Image" style="width: 150px; height: 150px;" />
+
+                    </div>
                     <!-- 이미지 업로드 폼 -->
                     <form method="POST" enctype="multipart/form-data" th:action="@{/member/uploadProfile}">
                         <input type="file" name="profileImage" accept="image/*" />
                         <button type="submit">업로드</button>
                     </form>
-                    <!-- 업로드된 프로필 사진 표시 -->
-                    <div th:if="${session.user.profile}">
-                        <img th:src="@{'/image/' + ${session.user.profile}}" alt="Profile Image" style="width: 150px; height: 150px;" />
-
-                    </div>
+                    
                 </td>
             </tr>
         </table>
 
       
 
-    <button>수정</button>
-    <button>탈퇴</button>
+    <a href="/member/delete/[[${session.user.accounts_idx}]]"><button class="submit">탈퇴</button></a>
+    <a href="/member/update"><button class="submit">수정</button></a>
   </div>
 
 
-  <script th:inline="javascript">
-    let btns = document.querySelectorAll('button');
-    
-    // 수정 버튼
-    btns[0].onclick = () => {
-      location.href = '/member/update';
-    };
-    
-    // 삭제 버튼
-    btns[1].onclick = () => {
-      // console.log([[${session.user.accounts_idx}]]);
-      location.href = '/member/delete/[[${session.user.accounts_idx}]]';
-    };
-  </script>
   
     </div>
 
